fix: also abort pending snapshot on leader/term change
Address review feedback: when a new leader is elected (term changes),
abort any in-progress snapshot replication in onAppend since the previous
leader will no longer send remaining chunks. This is done in both
PassiveRole.onAppend and ActiveRole.onAppend.

Also reflow comment in handleAppend and clean up test nits (use List.of()
instead of Collections.emptyList(), extract reflection helper).

(cherry picked from commit a7008f07046bff2b5a3e29310f2f56b2350b6409)